--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass-loader": "^10.1.1",
     "vue-cli-plugin-vuetify": "~2.0.9",
     "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.6.0"
+    "vuetify-loader": "^1.6.0",
+    "webpack-bundle-analyzer": "4.3.0"
   }
 }
